min-height for main div - calc insted of 100% - had issues on safari

--- a/app-src/css/app.css
+++ b/app-src/css/app.css
@@ -516,3 +516,7 @@ md-divider {
 .word-wrap {
     word-wrap: break-word;
 }
+
+a {
+    cursor: pointer;
+}
